[package]
name = "portForwarder"
version = "0.1.0"
authors = ["analyman <beam.analyman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ipnet = "2.7.1"
log = "0.4.17"
mio = { version = "0.8", features = ["os-poll", "net"] }
regex = "1"
yaml-rust = "0.4.5"
