[package]
name = "portForwarder"
version = "0.1.2"
authors = ["analyman <beam.analyman@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a TCP/UDP port multiplexer which forwards connection based on content of traffic"
homepage = "https://github.com/lidotcircle/portForwarder"
repository = "https://github.com/lidotcircle/portForwarder"
documentation = "https://github.com/lidotcircle/portForwarder/blob/master/README.md"
readme = "README.md"

[lib]
name = "portforwarder"
path = "src/lib.rs"

[[bin]]
name = "portfd"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.3.1"
env_logger = "0.10.0"
hex = "0.4.3"
ipnet = "2.7.1"
log = "0.4.17"
mio = { version = "1.0.3", features = ["os-poll", "net"] }
rand = "0.8.5"
regex = "1"
yaml-rust = "0.4.5"
